--- a/spring-cloud-alibaba-21-sample/pom.xml
+++ b/spring-cloud-alibaba-21-sample/pom.xml
@@ -15,6 +15,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <modules>
+        <module>coupon-server-coupon</module>
     </modules>
 
     <properties>
