--- a/spring-cloud-alibaba-21-sample/coupon-template-serv/pom.xml
+++ b/spring-cloud-alibaba-21-sample/coupon-template-serv/pom.xml
@@ -10,11 +10,15 @@
     </parent>
 
     <artifactId>coupon-template-serv</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0-SNAPSHOT</version>
     <name>coupon-template-serv</name>
     <description>coupon-template-serv</description>
 
     <packaging>pom</packaging>
+
+    <modules>
+        <module>coupon-template-api</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
