--- a/spring-cloud-alibaba-21-sample/coupon-template-serv/pom.xml
+++ b/spring-cloud-alibaba-21-sample/coupon-template-serv/pom.xml
@@ -17,7 +17,7 @@
     <packaging>pom</packaging>
 
     <modules>
-        <module>coupon-template-api</module>
+        <module>coupon-template-serv-api</module>
     </modules>
 
     <properties>
