add coupon template service

--- a/spring-cloud-alibaba-21-sample/coupon-template-serv/coupon-template-serv-dao/pom.xml
+++ b/spring-cloud-alibaba-21-sample/coupon-template-serv/coupon-template-serv-dao/pom.xml
@@ -6,7 +6,7 @@
         <groupId>io.github.ipipman</groupId>
         <artifactId>coupon-template-serv</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
+<!--        <relativePath>../pom.xml</relativePath>-->
     </parent>
 
     <artifactId>coupon-template-serv-dao</artifactId>
