--- a/spring-cloud-alibaba-21-sample/coupon-calculation-serv/pom.xml
+++ b/spring-cloud-alibaba-21-sample/coupon-calculation-serv/pom.xml
@@ -18,6 +18,7 @@
 
     <modules>
         <module>coupon-calculation-serv-api</module>
+        <module>coupon-calculation-serv-impl</module>
     </modules>
 
     <properties>
