--- a/spring-cloud-alibaba-21-sample/pom.xml
+++ b/spring-cloud-alibaba-21-sample/pom.xml
@@ -16,6 +16,7 @@
 
     <modules>
         <module>coupon-template-serv</module>
+        <module>coupon-calculation-serv</module>
     </modules>
 
     <properties>
