add customer dao

--- a/spring-cloud-alibaba-21-sample/coupon-customer-serv/pom.xml
+++ b/spring-cloud-alibaba-21-sample/coupon-customer-serv/pom.xml
@@ -18,6 +18,7 @@
 
     <modules>
         <module>coupon-customer-serv-api</module>
+        <module>coupon-customer-serv-dao</module>
     </modules>
 
     <properties>
