add customer service

--- a/spring-cloud-alibaba-21-sample/coupon-customer-serv/pom.xml
+++ b/spring-cloud-alibaba-21-sample/coupon-customer-serv/pom.xml
@@ -19,6 +19,7 @@
     <modules>
         <module>coupon-customer-serv-api</module>
         <module>coupon-customer-serv-dao</module>
+        <module>coupon-customer-serv-impl</module>
     </modules>
 
     <properties>
